--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -203,7 +203,7 @@ jobs:
           libraries: |
             # The sketches don't have any external library dependencies, so just define an empty array
             -
-          verbose: false
+          verbose: true
           enable-deltas-report: true
           enable-warnings-report: true
           sketches-report-path: sketches-reports
